--- a/serverless.yml
+++ b/serverless.yml
@@ -10,7 +10,7 @@ provider:
   runtime: nodejs10.x
   apiKeys:
     - TestApiKey
-  stage: test
+  stage: dev
 
 functions:
   accessTokenAuthorizer:
