--- a/package.json
+++ b/package.json
@@ -12,7 +12,17 @@
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/aws-lambda": "^8.10.31",
+    "@types/jsonwebtoken": "^8.3.3",
+    "babel-loader": "^8.0.6",
     "serverless": "^1.51.0",
-    "serverless-offline": "^5.10.1"
+    "serverless-offline": "^5.10.1",
+    "serverless-webpack": "^5.3.1",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.6.2",
+    "webpack": "^4.39.3"
   }
 }
